# safepad

./: package-lock.json  package.json
src/: edit-note.html  edit-note.js  index.html  main.js  show-notes.html  show-notes.js  style.css
src-tauri/: Cargo.toml  data.enc  tauri.conf.json
src-tauri/src/: main.rs
