[package]
name = "safepad"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.87", features = ["default"] }
serde_with = "2.1.0"
tauri = {version = "1.2", features = ["api-all"] }
tokio = { version = "1.22", features = ["full"] }
chrono = { version = "0.4.23", features = ["serde"] }
rand = "0.8.5"
rand_core = "0.6.4"
sodiumoxide = "0.2.7"
argon2 = "0.4.1"
anyhow = "1.0.65"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
zeroize = { version = "1.5.7", features = ["derive"] }
lazy_static = "1.4.0"
surrealdb-rs = { git = "https://github.com/surrealdb/surrealdb.rs", version = "0.1.0" }
sha2 = "0.10.6"
once_cell = "1.16.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
strip = true
